Bug 148929 - FILESAVE: PPTX: Incorrect background color
Summary: FILESAVE: PPTX: Incorrect background color
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.4.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2022-05-04 11:46 UTC by Xisco Faulí
Modified: 2022-05-20 14:35 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparison before and after RT (274.18 KB, image/png)
2022-05-04 11:46 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2022-05-04 11:46:34 UTC
Created attachment 179919 [details]
Comparison before and after RT

Steps to reproduce:
1. Open attachment 66575 [details] from bug 54460
2. Save it to PPTX
3. Reopen

-> The table in slide 2 has incorrect background color. See comparison

Reproduced in

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 75fe4051320ef9b1f4323fa958e8df3db2066882
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2022-05-04 11:47:31 UTC
Regression introduced by:

author	Miklos Vajna <vmiklos@collabora.com>	2022-04-27 20:12:52 +0200
committer	Miklos Vajna <vmiklos@collabora.com>	2022-04-28 08:15:54 +0200
commit 30735bdb5a0a81619000fdd24b2d0fbf45687f01 (patch)
tree 43a99bea091701eee066d9f1410777671d3b3b9f
parent bd568b360450b348ff0e6813862a49892df81140 (diff)
sd theme: add PPTX import for shape fill color effects

Bisected with: bibisect-linux64-7.4

Adding Cc: to Miklos Vajna
Comment 2 Xisco Faulí 2022-05-04 12:20:49 UTC
attachment 142661 [details] from bug 104199 is also affected by the same issue. The green color is incorrect after RT
Comment 3 Xisco Faulí 2022-05-04 12:29:31 UTC
and attachment 151121 [details] from bug 125070
Comment 4 Commit Notification 2022-05-06 06:13:28 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f932b00f3a72dd802a6e50af84c3dc55072a22a0

tdf#148929 sd theme: limit PPTX import for shape fill effects to lum mod/off

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2022-05-06 08:35:00 UTC
The original report is fixed in

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: f932b00f3a72dd802a6e50af84c3dc55072a22a0
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

The other two documents mentioned are still problematic. I'll create a follow-up ticket

@Miklos, thanks for fixing this issue!!