tdf#148929 sd theme: limit PPTX import for shape fill effects to lum mod/off

Regression from 30735bdb5a0a81619000fdd24b2d0fbf45687f01 (sd theme: add PPTX
import for shape fill color effects, 2022-04-27), the bugdoc's A2 cell
lost its tinting (its background color is no longer lighter than A1)
after saving back to PPTX + import again.

The code assumed that in case a fill color has effects, it can only be
luminance offset or modulation, since that's what the PowerPoint UI
generates when setting a fill color explicitly. This did not take the
table style case into account, which uses tinting to make a color
lighter.

Fix the problem by not importing the theme index / effects if tinting is
used -- the current doc model is limited to theme index + lum mod/off
with effects.

This limitation can be removed while text color / fill color effects are
not limited to lum mod/off, but also support tinting/shading.

(cherry picked from commit f932b00f3a72dd802a6e50af84c3dc55072a22a0)

Change-Id: I382cc0067518cc262e261a462999170cb7db261b